--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -1,6 +1,17 @@
 .home_hero {
-  margin-top: 101px !important;
-  padding: 110px 24px !important;
+  padding: 217px 24px !important;
+  position: relative;
+  overflow-y: clip;
+  .gradient {
+    position: absolute;
+    width: 384.97px;
+    height: 363.28px;
+    right: 0px;
+    top: 209.78px;
+    background: #dd94ef;
+    opacity: var(--home-gradient-opacity);
+    filter: blur(200px);
+  }
   h2 {
     font-style: normal;
     font-weight: normal;
@@ -16,13 +27,13 @@
     line-height: 29px;
     letter-spacing: -0.03em;
     color: var(--secondary-text-color);
-    margin: -8px 0 56px;
+    margin: -8px 0;
     width: 100%;
     max-width: 564px;
     span {
       color: var(--tertary-text-color);
       text-decoration: underline;
-     font-weight: $font-weight-2; 
+      font-weight: $font-weight-2;
     }
   }
   .scroll {
@@ -37,7 +48,7 @@
   }
 }
 
-.hero_fixed  * {
+.hero_fixed * {
   transition: 200ms ease-out !important;
 }
 
@@ -96,10 +107,9 @@
   .link {
     display: flex;
     gap: 16px;
-    // padding: 0 48px;
     align-items: center;
     justify-items: center;
-    a {
+    button {
       font-style: normal;
       font-weight: normal;
       font-size: 18px;
@@ -125,20 +135,31 @@
 }
 
 @media screen and (max-width: 768px) {
-  .home_hero {
-    margin-top: 83px !important;
-  }
   .article_container {
     grid-template-columns: repeat(2, minmax(auto, 394px));
   }
 }
 
 @media screen and (max-width: 500px) {
+  .fixed_home {
+    position: sticky;
+    right: 0px;
+    left: 0px;
+    top: 0px;
+    z-index: 5;
+  }
   .home_subcategory {
     display: block;
   }
   .home_hero {
     backdrop-filter: blur(16px);
+    .gradient {
+      top: 285px !important;
+      width: 128.06px !important;
+      height: 189.94px !important;
+      filter: blur(109 px);
+      right: 0 !important;
+    }
     h2 {
       font-size: 30px;
       line-height: 49px;
@@ -147,13 +168,14 @@
       margin-top: 0px !important;
       font-size: 15px;
       line-height: 24px;
+      padding-bottom: 110px;
     }
   }
   .bg_color_article {
     background: var(--mobile-article-background);
   }
   .max_width {
-    padding: 47px 33px 0 !important;
+    padding: 130px 33px 0 !important;
   }
   .link {
     gap: 8px !important;
@@ -220,4 +242,17 @@
   padding: 24px 33px 0px !important;
   text-align: center;
   color: var(--blog-post-primary-text-color);
+}
+@media screen and (min-width: 501px) {
+  .home_hero {
+    p {
+      padding-bottom: 0 !important;
+      height: fit-content !important;
+    }
+  }
+  .fixed_home {
+    .mobile_nav {
+      display: none;
+    }
+  }
 }
